--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,8 @@ annotated-types==0.5.0
 anyio==3.7.1
     # via
     #   fastapi
-    #   httpcore
     #   starlette
     #   watchfiles
-certifi==2023.7.22
-    # via
-    #   httpcore
-    #   httpx
 click==8.1.7
     # via uvicorn
 fastapi==0.103.1
@@ -23,19 +18,11 @@ fastapi==0.103.1
 gunicorn==21.2.0
     # via -r requirements.in
 h11==0.14.0
-    # via
-    #   httpcore
-    #   uvicorn
-httpcore==0.17.3
-    # via httpx
+    # via uvicorn
 httptools==0.6.0
     # via uvicorn
-httpx==0.24.1
-    # via -r requirements.in
 idna==3.4
-    # via
-    #   anyio
-    #   httpx
+    # via anyio
 loguru==0.7.0
     # via -r requirements.in
 packaging==23.1
@@ -49,10 +36,7 @@ python-dotenv==1.0.0
 pyyaml==6.0.1
     # via uvicorn
 sniffio==1.3.0
-    # via
-    #   anyio
-    #   httpcore
-    #   httpx
+    # via anyio
 starlette==0.27.0
     # via fastapi
 typing-extensions==4.7.1
